--- a/styles/main.css
+++ b/styles/main.css
@@ -63,6 +63,16 @@ header {
     box-sizing: border-box;
   }
 
+  header .appcamp {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 120px;
+  }
+    header .appcamp img {
+      width: 100%;
+    }
+
 
 
 /* Main
